# model-price

./: .gitignore  README.md  README_CN.md
.github/workflows/: keepalive.yml
backend/: README.md  api_v2.py  config.py  main.py  pyproject.toml
backend/data/: index.json
backend/data/providers/: aws_bedrock.json  azure_openai.json  google_gemini.json  openai.json  openrouter.json  xai.json
backend/data/v2/: drift.json  entities.json  index.json  offerings.json
backend/data/v2/fixtures/: sample.json
backend/models/: __init__.py  pricing.py  v2.py
backend/scripts/: generate_og_cover.py  sanity_check.py  take_screenshots.py
backend/services/: __init__.py  alternatives.py  canonical.py  drift_reporter.py  entity_store.py  fetcher.py  litellm_registry.py  metadata_fetcher.py  offering_merger.py  refresh_scheduler.py
backend/tests/: test_alternatives.py  test_api_v2.py  test_canonical_resolver.py  test_derive_capability_modality.py  test_family_detection.py  test_offering_merger_helpers.py  test_slugify.py  test_zero_stub_detection.py
deploy/: Caddyfile  deploy.env  deploy.sh  model-price-backend.service
docs/plans/: 2026-04-14-v2-redesign-design.md  v2-api-contract.md
frontend/: README.md  index.html  package-lock.json  package.json  vercel.json  vitest.config.ts
frontend/public/: fallback.json  v2-fallback.json
frontend/scripts/: build-fallback.mjs  build-v2-fallback.mjs
frontend/src/: fontsource.d.ts  main.tsx
frontend/src/config/: api.ts
frontend/src/hooks/: useCompareBasket.ts  useEntitiesV2.ts  useEntityV2.ts  useModels.ts  useSearchV2.ts
(+43 files in other folders)
