[project]
name = "model-price-backend"
version = "0.2.0"
description = "AI Model Pricing API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "playwright>=1.49.0",
    "pydantic-settings>=2.12.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
typeCheckingMode = "basic"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false

[dependency-groups]
dev = [
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
